# agentic-reconciliation-engine

./: .claude  .env.template  .gitignore  .sops.pub.age  .sops.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONSOLIDATION-SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_STATUS.md  Dockerfile  FILE-MOVEMENT-SUMMARY.md  FINAL_VALIDATION.md  JOB_ORCHESTRATION.md  KARMADA_SETUP.md  Makefile  README-SKILL-INTEGRATION.md  README-unified-crossplane.md  README.md  RESTRUCTURE_SUMMARY.md  SECURITY-INCIDENT-RESPONSE.md  SETUP.md  SYSTEM-CAPABILITIES.md  access-dashboard.sh  accurate-backend.py  agent-memory-rust-working.yaml  agent-memory-storage-fix.yaml  agent-memory-storage-simple.yaml  agentic-ai-service-monitors.yaml  api-server.py  auto-test-fix.sh  azure-pipelines-run-local-automation.yml  bootstrap-hybrid-flux.sh  bootstrap.sh  complete-cli-testing.sh  comprehensive-api.js  comprehensive_dashboard.py  configmap-backend.yaml  (+89 more)
.agents/: README.md  SKILL_TEMPLATE.md  SKILL_TEMPLATE_PYTHON.md
.github/: README.md  copilot-instructions.md  dependabot.yml  kind-cluster.yaml
agent-tracing-evaluation/: .gitignore  README.md  __init__.py  api_server.py  api_server_fastapi.py  cli.py  example_usage.py  main.py  main_corrupted.py  requirements.txt
azure/: applications.yaml  applicationsets.yaml
control-plane/: kustomization.yaml
core/: crossplane-orchestrator.py  multi-cloud-abstraction-crossplane.js  multi-cloud-abstraction.js  performance-profiler.js
core/ai/runtime/agents/agent-memory-rust/: Cargo.toml  Dockerfile  README.md  setup-llamacpp.sh
core/ai/runtime/agents/agent-memory-rust/k8s/: deployment.yaml
core/ai/runtime/agents/agent-memory-rust/src/: database.rs  handlers.rs  integration.rs  models.rs  qwen.rs
core/ai/runtime/backend/agent-memory-rust/: Cargo-basic.toml  Cargo-minimal.toml  Cargo.toml  Dockerfile
core/ai/runtime/backend/agent-memory-rust/src/: config.rs  database.rs  inference.rs  lib.rs  llama_integration.rs  main-basic.rs  main-minimal.rs  main-stdlib.rs  main.rs  metrics.rs  models.rs  server.rs
core/ai/runtime/standalone/memory-rust-qwen-integration-llama-cpp-server/: Cargo-basic.toml  Cargo-minimal.toml  Cargo-simple.toml  Cargo-stdlib.toml  Cargo.toml  Dockerfile
core/ai/runtime/standalone/memory-rust-qwen-integration-llama-cpp-server/src/: auth.rs  config.rs  error.rs  inference.rs  llama_integration.rs
core/operators/control-plane/consensus/: Cargo.toml  ConsensusFeedbackLoop.cs  ConsensusFeedbackLoop.csproj  ConsensusFeedbackLoop.java  agent-swarm.yaml  consensus-csharp-configmap.yaml  consensus-layer.yaml  consensus-python-configmap.yaml  consensus-rust-configmap.yaml  consensus_feedback_loop.py  feedback-loops.yaml  kustomization.yaml  package.json
dashboard/: real-dashboard-data.yaml  real-dashboard-html.yaml  updated-dashboard-server.js
dashboard-frontend/: package-lock.json  package.json
deployments/: README.md  ai-agent-evaluation-cronjob.yaml  ai-agent-evaluator-complete.yaml  deploy-evaluation-framework.sh  temporal_worker.py
docker/: Dockerfile.api
docs/: A2A-RAFT-INTEGRATION-PLAN.md  AGENT-ARCHITECTURE-OVERVIEW.md  AGENT-ARCHITECTURE-SUMMARY.md  AGENT-CLIENTS.md  AGENT-COMPLETE-DEPLOYMENT-GUIDE.md  AGENT-DASHBOARD-DEPLOYMENT-GUIDE.md  AGENT-DASHBOARD-GUIDE.md  AGENT-DEBUG-AND-MONITOR.md  AGENT-DEBUG-GUIDE.md  AGENT-DEBUG-IMPLEMENTATION.md  AGENT-DEBUG-REFERENCE.md  AGENT-DEBUG-TROUBLESHOOTING.md  AGENT-DEPLOYMENT-CHECKLIST.md  AGENT-DEPLOYMENT-GUIDE.md  AGENT-DEPLOYMENT-ISSUES-AND-SOLUTIONS.md  AGENT-DEPLOYMENT-REPORT.md  AGENT-DOCKER-BUILD-GUIDE.md  AGENT-INTEGRATION-TESTING-GUIDE.md  AGENT-MEMORY-ARCHITECTURE.md  AGENT-MEMORY-RUST-BUILD-GUIDE.md  AGENT-MONITOR-SETUP.md  AGENT-NAMING-AUTOMATION.md  AGENT-NAMING-QUICK-REFERENCE.md  AGENT-REFERENCE-GUIDE.md  AGENT-RUNTIME.md  AGENT-SKILLS-NEXT-LEVEL.md  AGENT-SKILLS-PYTHON-RATIONALE.md  AGENT-TIMEOUT-FIX-GUIDE.md  AGENTIC-AI-ENHANCEMENT-PLAN-ARCHIVED.md  AGENTIC-AI-EXTENDED-CAPABILITIES.md  AGENTIC-AI-IMPLEMENTATION-PLAN-CONSOLIDATED.md  AGENTIC-AI-IMPLEMENTATION-SUMMARY.md  AGENTIC-AI-INFRASTRUCTURE-USER-GUIDE.md  AGENTIC-AI-SKILLS-GUIDE.md  AGENTIC-AI-UBER-INSIGHTS-AND-PLAN-ARCHIVED.md  AI-AGENT-DEBUGGER-GUIDE.md  AI-AGENT-DEPLOYMENT-AND-CROSSPLANE-RESOLUTION-IMPLEMENTATION-PLAN.md  AI-AGENT-DEPLOYMENT-AND-CROSSPLANE-RESOLUTION-WALKTHROUGH-1-OF-2.md  AI-AGENT-DEPLOYMENT-AND-CROSSPLANE-RESOLUTION-WALKTHROUGH-2-OF-2.md  AI-AGENT-EVALUATION-FRAMEWORK.md  (+403 more)
examples/: memory-agent-tracing.go
flux-operator/: flux-ui-auth-sealed.yaml.template  flux-ui-ingress.yaml  fluxinstance-configurations.md  ingress-configurations.md  sync-configurations.md
hooks/: post-quickstart.sh
infrastructure/: dashboard-api-configmap.yaml  dynamic-data-service.yaml  fix-cors-v2.yaml  go.mod  kustomization.yaml
infrastructure/ai-inference/rust-agent/: Cargo.toml
infrastructure/ai-inference/rust-agent/src/: main.rs
jenkins/: Jenkinsfile  run-tests.sh
overlay/: agentic-ai-advanced-features.yaml  dashboard-backend-rbac.yaml  docker-temporal.yaml  prometheus-operator.yaml  skills-orchestrator-fix.yaml  temporal-setup.yaml
portal/: comprehensive_api.py  server.py  start-portal.sh
scripts/: bootstrap.sh  (+148 more)
(+9262 files in other folders)
