[package]
name = "agent-memory-rust"
version = "1.0.0"
edition = "2021"
authors = ["GitOps Infrastructure Team"]
description = "Memory agent with Qwen LLM integration using llama.cpp"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
chrono = { version = "0.4.31", features = ["serde"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Authentication & Security
jsonwebtoken = "9.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics & Monitoring
prometheus = "0.13"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"

# Llama.cpp integration (placeholder - would need actual bindings)
# llama-cpp-rs = "0.1"  # This would be the actual llama.cpp binding

[dev-dependencies]
tempfile = "3.0"
testcontainers = "0.15"

[[bin]]
name = "agent-memory"
path = "src/main.rs"

[lib]
name = "agent_memory"
path = "src/lib.rs"
